--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,7 @@
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/my_appointments?useSSL=false&serverTimezone=UTC
+    #url: jdbc:mysql://host.docker.internal/my_appointments?useSSL=false&serverTimezone=UTC
     username: root
     password: 12345
     driver-class-name: com.mysql.cj.jdbc.Driver
