--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,10 @@
 			<version>1.5.3.Final</version> <!-- Verifique a versão mais recente -->
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
